2002-11-08  Darin Adler  <darin@apple.com>

	- fixed an assert I am seeing a lot

        * WebView.subproj/WebDataSourcePrivate.m: (-[WebDataSource _setRequest:]): Oops.

2002-11-08  Richard Williamson   <rjw@apple.com>

        Solved missing glyph problem, but it's very slow, so
        it's disabled for now.  I'll turn back on after extending
        the character to glyph map in each renderer to include
        substituted font.
        
        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer substituteFontForString:]):
        (-[WebTextRenderer _floatWidthForCharacters:stringLength:fromCharacterPosition:numberOfCharacters:withPadding:applyRounding:attemptFontSubstitution:widths:fonts:glyphs:numGlyphs:]):

2002-11-08  Darin Adler  <darin@apple.com>

	- separate WebBaseNetscapePluginStream more cleanly from its subclasses
	by making most fields private

        * Plugins.subproj/WebBaseNetscapePluginStream.m:
        (-[WebBaseNetscapePluginStream setResponse:]):
        * Plugins.subproj/WebNetscapePluginStream.h:
        * Plugins.subproj/WebNetscapePluginStream.m:
        (-[WebNetscapePluginStream initWithRequest:pluginPointer:notifyData:]):
        (-[WebNetscapePluginStream dealloc]):
        (-[WebNetscapePluginStream start]):
        (-[WebNetscapePluginStream handle:didReceiveData:]):
        (-[WebNetscapePluginStream handle:didFailLoadingWithError:]):
        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (-[WebSubresourceClient handle:didReceiveResponse:]):
        (-[WebSubresourceClient handle:didReceiveData:]):
        (-[WebSubresourceClient handleDidFinishLoading:]):
        (-[WebSubresourceClient handle:didFailLoadingWithError:]):
        (-[WebSubresourceClient cancel]):
        * WebView.subproj/WebBaseResourceHandleDelegate.h:
        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate handle:willSendRequest:]):